--- a/styles.css
+++ b/styles.css
@@ -36,37 +36,37 @@
 	background-color: #4F4949;
 }
 
-/*.container-4 {*/
-/*	height: 300px;*/
-/*	background-color: #4F4949;*/
-/*}*/
+.container-4 {
+	height: 33.4%;
+	background-color: #4F4949;
+}
 
-/*.container-5 {*/
-/*	margin-top: 35px;*/
-/*	height: 195px;*/
-/*	background-color: #4F4949;*/
-/*}*/
+.container-5 {
+	margin-top: 35px;
+	height: 195px;
+	background-color: #4F4949;
+}
 
-/*.container-6 {*/
-/*	margin-top: 35px;*/
-/*	height: 335px;*/
-/*	background-color: #4F4949;*/
-/*}*/
+.container-6 {
+	margin-top: 35px;
+	height: 335px;
+	background-color: #4F4949;
+}
 
-/*.container-7 {*/
-/*	height: 190px;*/
-/*	background-color: #4F4949;*/
-/*}*/
+.container-7 {
+height: 190px;
+	background-color: #4F4949;
+}
 
-/*.container-8 {*/
-/*	margin-top: 35px;*/
-/*	height: 190px;*/
-/*	background-color: #4F4949;*/
-/*}*/
+.container-8 {
+	margin-top: 35px;
+height: 190px;
+	background-color: #4F4949;
+}
 
-/*.container-9 {*/
-/*	margin-top: 35px;*/
-/*	height: 450px;*/
-/*	background-color: #4F4949;*/
-/*}*/
+.container-9 {
+	margin-top: 35px;
+	height: 450px;
+	background-color: #4F4949;
+}
 
