--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,17 @@
 }
 
 .parent{
-	height: 100vh;
-	padding: 50px;
-	position: relative;
-	
 	display: flex;
+	height: 100vh;
+	width: 100%;
+	padding: 50px;
 }
 
 .column{
-	width: 33%;
-	background-color: wheat;
+	width: calc(100% / 3);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .column-1, .column-2{
@@ -20,53 +21,47 @@
 }
 
 .container-1 {
-	height: 11.19%;
+	height: calc((110 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-2 {
-	margin-top: 35px;
-	height: 54.63%;
+	height: calc((590 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-3 {
-	margin-top: 35px;
-	height: 19.45%;
+	height: calc((210 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-4 {
-	height: 33.4%;
+	height: calc((360 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-5 {
-	margin-top: 35px;
-	height: 195px;
+	height: calc((190 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-6 {
-	margin-top: 35px;
-	height: 335px;
+	height: calc((360 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-7 {
-height: 190px;
+	height: calc((210 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-8 {
-	margin-top: 35px;
-height: 190px;
+	height: calc((210 / 980) * 100% );
 	background-color: #4F4949;
 }
 
 .container-9 {
-	margin-top: 35px;
-	height: 450px;
+	height: calc((490 / 980) * 100% );
 	background-color: #4F4949;
 }
 
