--- a/pages/SummerPage/SummerPage.css
+++ b/pages/SummerPage/SummerPage.css
@@ -16,6 +16,9 @@ a:visited {
 .parent {
 	display: flex;
 	flex-direction: row;
+	background-repeat: no-repeat;
+	height: 100%;
+	
 }
 
 .link-to-main {
@@ -32,25 +35,25 @@ a:visited {
 	font-size: large;
 }
 
-.operations-of-descryptor {
+.operations-of-summer {
 	display: flex;
 	box-sizing: border-box;
 	align-items: center;
-	width: 50%;
+	width: 90%;
 	height: 330px;
 	background-color: #a9a9a9;
 	font-size: x-large;
 	padding: 10px;
 	border-radius: 10px;
-	margin-bottom: 1%;
+	margin-bottom: 4%;
 }
 
-.types-of-descryptor {
+.functions-of-summer {
 	display: flex;
 	box-sizing: border-box;
 	align-items: center;
 	width: 60%;
-	height: 335px;
+	height: 200px;
 	background-color: #a9a9a9;
 	font-size: x-large;
 	padding: 10px;
@@ -61,10 +64,10 @@ a:visited {
 	display: flex;
 	box-sizing: border-box;
 	align-items: center;
-	width: 30%;
+	width: 70%;
 	height: 180px;
 	background-color: #a9a9a9;
-	margin-top: 1%;
+	margin-top: 3%;
 	font-size: x-large;
 	border-radius: 10px;
 	padding: 1%;
@@ -74,6 +77,7 @@ a:visited {
 	display: flex;
 	box-sizing: border-box;
 	margin-right: 10%;
+	margin-left: 10%;
 	margin-top: 5%;
 	width: 600px;
 	height: 600px;
